--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,3 @@
-AUTH0_DOMAIN=login.chelseacropper.com
+AUTH0_DOMAIN=dev-6nxnbs7c.auth0.com
 AUTH0_CLIENTID=629bKJPDYtg32DI1OVXIQAghoE3yjrQ1
 AUTH0_CALLBACK=http://localhost:8000/callback
